# data-warehouse

./: .gitignore  README.md  pyproject.toml
hw-snowflake/: 01_elt_pipeline.py  Q6.sql  main.py  pyproject.toml  upload_data.py
snowflake_python/: 01_elt_pipeline.py  02_time_travel_demo.py  03_dbt_ingest_data.py
snowflake_sql/: Q4.sql
spark-batch/: homework.py
taxi_rides_ny/: README.md  dbt_project.yml
taxi_rides_ny/macros/: get_payment_type_description.sql
taxi_rides_ny/models/: sources.yml  stg_green_tripdata.sql  stg_yellow_tripdata.sql
taxi_rides_ny/models/core/: dim_zones.sql  fct_trips.sql  schema.yml
taxi_rides_ny/models/staging/: int_trips_unioned.sql  schema.yml  sources.yml  stg_green_tripdata.sql  stg_yellow_tripdata.sql
taxi_rides_ny/tests/: assert_positive_fare_amount.sql
