[project]
name = "hw-snowflake"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-duckdb>=1.10.1",
    "dotenv>=0.9.9",
    "duckdb>=1.4.4",
    "pandas>=3.0.0",
    "pyarrow>=23.0.0",
    "snowflake-connector-python>=4.2.0",
]
